fixed code for passing tests successfully